--- a/MvcWebApp/Views/TableStorages/Index.cshtml
+++ b/MvcWebApp/Views/TableStorages/Index.cshtml
@@ -29,7 +29,11 @@
 <h2>Products</h2>
 
 
-
+<form class="form-inline mb-3" asp-action="Query" method="Get">
+    
+    <input type="number" class="form-control mr-2 " name="price" placeholder="Nereden sonra sıralamak istediğiniz ürün fiyatını giriniz"/>
+    <input type="submit" class="btn btn-dark" value="Search/Query"/>
+</form>
 
 
 <table class="table table-bordered">
@@ -40,7 +44,7 @@
         <th>Price</th>
         <th>Stock</th>
         <th>Color</th>
-        <th>TimeStamp</th>
+        @*<th>TimeStamp</th>*@
         <th>Actions</th>
     </tr>
 
@@ -54,7 +58,7 @@
             <td>@item.Price</td>
             <td>@item.Stock</td>
             <td>@item.Color</td>
-            <td>@item.Timestamp</td>
+            @*<td>@item.Timestamp</td>*@
             <td>
                 <a class="btn btn-success mr-1 btn-sm" asp-action="Update" asp-controller="TableStorages" asp-route-rowKey="@item.RowKey" asp-route-partitionKey="@item.PartitionKey">Update</a>
                 <a class="btn btn-danger btn-sm" asp-action="Delete" asp-controller="TableStorages" asp-route-rowKey="@item.RowKey" asp-route-partitionKey="@item.PartitionKey">Delete</a>
