--- a/MvcWebApp/Views/Blobs/Index.cshtml
+++ b/MvcWebApp/Views/Blobs/Index.cshtml
@@ -2,6 +2,18 @@
     ViewData["Title"] = "Index";
 }
 
+<h2>Save Picture</h2>
+<form asp-action="Upload" method="post" enctype="multipart/form-data">
+
+    @* Name'i Controller tarafındaki parametre olan picture olması gerekir*@
+    <input type="file" name="picture" />
+    <button class="btn btn-primary" type="submit">Save Picture</button>
+
+
+
+
+</form>
+
 <h2>Pictures</h2>
 <table class="table table-bordered">
     <tr>
