BlobsController da Delete operasyonu tamamlandı

--- a/MvcWebApp/Views/Blobs/Index.cshtml
+++ b/MvcWebApp/Views/Blobs/Index.cshtml
@@ -35,6 +35,7 @@
             </td>
             <td>
                 <a class="btn btn-sm btn-outline-info" style="border: 2px solid " asp-action="Download" asp-route-fileName="@item.Name">Download</a>
+                <a class="btn btn-sm btn-outline-danger" style="border: 2px solid " asp-action="Delete" asp-route-fileName="@item.Name">Delete</a>
             </td>
         </tr>
 
