--- a/MvcWebApp/Views/Blobs/Index.cshtml
+++ b/MvcWebApp/Views/Blobs/Index.cshtml
@@ -14,6 +14,14 @@
 
 </form>
 
+@* Logları gösterme işlemi *@
+<h2>Logs</h2>
+@foreach (var item in ViewBag.logs as List<string>)
+{
+    <div>@item</div>
+}
+
+
 <h2>Pictures</h2>
 <table class="table table-bordered">
     <tr>
