--- a/MvcWebApp/Views/Pictures/Index.cshtml
+++ b/MvcWebApp/Views/Pictures/Index.cshtml
@@ -2,8 +2,22 @@
 
 @section Scripts
 {
+
+    @* SignalR için  *@
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+
     <script type="text/javascript">
         $(document).ready(() => {
+            // Hub ile bağlantı sağlanıyor.                     Mvc projesi içersinden başlatığım için https://localhos.... gerek yok
+            var connection = new signalR.HubConnectionBuilder().withUrl("/notificationHub").build();
+
+            //Bağlanan Client'in connectionId sini göstercem
+            connection.start().then(() => {
+                // connectionId'nin c'is küçük olmak zorunda
+                console.log(`Hub ConnectionId: ${connection.connectionId}`);
+            });
+
+
             //Tıklanan resimleri yakalamak istiyorum
             var pictures = new Array();
 
@@ -16,24 +30,24 @@
                 var pictureWatermarkQueue = {
                     "UserId": UserId,
                     "City": City,
-                    "ConnectionId": "123",
+                    "ConnectionId": connection.connectionId,
                     "WatermarkText": $("#WatermarkText").val(),
                     "WatermarkPictures": pictures
                 };
 
                 // Önce metot adı sonra gönderilecek data yazıldı eğer başarılı olursa datamızı alalım
-                $.post("/Pictures/AddWatermark",pictureWatermarkQueue,(data) => {
-                    console.log("mesaj gönderildi");
-                });
+                $.post("/Pictures/AddWatermark",
+                    pictureWatermarkQueue,
+                    (data) => {
+                        console.log("mesaj gönderildi");
+                    });
             });
 
 
-
-
-            $("#images img").click(function () {    // function olarak almazsam this (img) erişemem
+            $("#images img").click(function() { // function olarak almazsam this (img) erişemem
                 $(this).css("border", "3px solid red"); // tıklanan image'e css veriyorum
 
-                pictures.push($(this).attr("data-name"));//tıklanan resmi tıklanan resimlere ekliyorum
+                pictures.push($(this).attr("data-name")); //tıklanan resmi tıklanan resimlere ekliyorum
 
                 console.log(pictures);
 
@@ -44,6 +58,7 @@
 }
 
 <div class="row">
+
     @* offset-md-2 kodu soldan ve sağdan 2 blok boşluk bırakacak ve tam ortada gözükecek *@
     <div class="col-md-8 offset-md-2">
         <form class="form-inline" asp-action="Index" method="post" enctype="multipart/form-data">
@@ -52,12 +67,14 @@
 
             <input class="btn btn-outline-success" type="submit" value="Add Picture" />
         </form>
+        <br />
+
 
 
         <div class="form-inline">
             @* Resim yazısı ekleme operasyonu *@
-            <input type="text" id="WatermarkText" />
-            <button id="AddWatermarkAsync">Add WaterMark</button>
+            <input class="form-control" type="text" id="WatermarkText" />
+            <button class="btn btn-primary ml-1" id="AddWatermarkAsync">Add WaterMark</button>
         </div>
 
 
