Yazı eklenen resimleri gösterme işlemi yapıldı. Tek sadece clientlar ile iletişim kaldı.

--- a/MvcWebApp/Views/Pictures/Index.cshtml
+++ b/MvcWebApp/Views/Pictures/Index.cshtml
@@ -21,7 +21,7 @@
             connection.on("notifyCompleteWatermarkProcess", () => {
                 console.log("İşlem tamamlandı.");
 
-                $("#status").text("Resimlerinize yazı ekleme işlemi tamamlanmıştır.");
+                $("#status").text(`Resimlerinize yazı ekleme işlemi tamamlanmıştır. <a href="/pictures/ShowWatermark">işlenmiş resimlerinizi görmek için tıklayınız</a>`);
             });
 
 
@@ -69,6 +69,8 @@
 
     @* offset-md-2 kodu soldan ve sağdan 2 blok boşluk bırakacak ve tam ortada gözükecek *@
     <div class="col-md-8 offset-md-2">
+
+        <a href="/pictures/ShowWatermark">işlenmiş resimlerinizi görmek için tıklayınız</a>
         <form class="form-inline" asp-action="Index" method="post" enctype="multipart/form-data">
             @* name="parametrede kullanılan adın aynısı" *@
             <input type="file" name="pictures" multiple /> @* multiple ile kullanıcı birden fazla resim seçebilsin *@
@@ -87,7 +89,7 @@
 
 
         <h2 id="status" style="color: slateblue;"></h2>
-        
+
 
         <h2>Pictures</h2>
 
