--- a/MvcWebApp/Views/Pictures/Index.cshtml
+++ b/MvcWebApp/Views/Pictures/Index.cshtml
@@ -70,8 +70,8 @@
 <div class="row">
 
     @* offset-md-2 kodu soldan ve sağdan 2 blok boşluk bırakacak ve tam ortada gözükecek *@
-    <div class="col-md-8 offset-md-2">
-
+    <div class="col-md-12 container">
+        
         <form class="form-inline" asp-action="Index" method="post" enctype="multipart/form-data">
             @* name="parametrede kullanılan adın aynısı" *@
             <input type="file" name="pictures" multiple /> @* multiple ile kullanıcı birden fazla resim seçebilsin *@
